fix: console.log

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <h1>🚀 TODO APP <span class="badge">CI/CD Active</span></h1>
     <input type="text" placeholder="What needs to be done?">
-    <button>Add Task</button>
+    <button>Add Task</button>                       
     <p>※このサイトはGitHub Actionsから自動デプロイされています</p>
+    <script>
+        console.log("CL/CD is working perfectlt !");
+    </script>
 </body>
 </html>
